# internal/delivery/http/middleware/jwt.go
@@ -1,0 +1,35 @@
+package middleware
+
+import (
+	"log"
+	"net/http"
+	"strings"
+
+	"chekisvc/pkg/utils"
+
+	"github.com/gin-gonic/gin"
+	"github.com/golang-jwt/jwt/v5"
+)
+
+func JWTAuth() gin.HandlerFunc {
+	return func(c *gin.Context) {
+		header := c.GetHeader("Authorization")
+		log.Println("Authorization Header:", header)
+		if !strings.HasPrefix(header, "Bearer ") {
+			c.AbortWithStatusJSON(http.StatusUnauthorized, gin.H{"error": "missing or invalid token"})
+			return
+		}
+		tokenString := strings.TrimPrefix(header, "Bearer ")
+		token, err := utils.ValidateJWT(tokenString)
+		if err != nil || !token.Valid {
+			c.AbortWithStatusJSON(http.StatusUnauthorized, gin.H{"error": "invalid token"})
+			return
+		}
+		claims, ok := token.Claims.(jwt.MapClaims)
+		if ok {
+			c.Set("user_id", claims["user_id"])
+			c.Set("email", claims["email"])
+		}
+		c.Next()
+	}
+}
